<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MAV Downlink</string>
    <string name="action_settings">Settings</string>
    <string name="start_downlink">Start Downlink</string>
    <string name="stop_downlink">Stop Downlink</string>
    <string name="lblServerIP">Server IP:</string>
    <string name="lblServerPort">Server Port:</string>
    <string name="hintServerIP">0.0.0.0</string>
    <string name="hintPort">9999</string>
    <string name="number_messages">Messages:</string>
    <string name="mav_status">MAVLink:</string>
    <string name="downlink_status">Downlink:</string>
    
    <!-- For settings.xml -->
    <string name="tcp_port">TCP Port</string>
    <string name="tcp_port_desc">The TCP port to be used to connect to the downlink server.</string>
    <string name="baud_rate">Baud Rate</string>
    <string name="baud_rate_desc">The baud rate for the serial connection with the autopilot board. Changing this will reset the app.</string>
    <string name="keep_screen_on">Keep Screen On</string>
    <string name="keep_screen_on_desc">Whether or not to keep the screen on when connected. Recommended setting.</string>
	<string-array name="baud_rate_values">
	    <item>115200</item>
		<item>57600</item>
		<item>9600</item>
	</string-array>
</resources>
