<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/bEnableMapper"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/start_downlink" />

    <EditText
        android:id="@+id/tServerIP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/bEnableMapper"
        android:layout_marginTop="26dp"
        android:layout_toLeftOf="@string/lblServerIP"
        android:ems="10"
        android:hint="@string/hintServerIP" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tServerIP"
        android:layout_alignBottom="@+id/tServerIP"
        android:layout_toLeftOf="@+id/tServerIP"
        android:text="@string/lblServerIP" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tServerIP"
        android:layout_marginTop="21dp"
        android:layout_toRightOf="@+id/textView1"
        android:text="@string/number_messages" />

    <TextView
        android:id="@+id/tMessageCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignRight="@+id/tServerIP"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@+id/textView3"
        android:text="0" />

    <ImageView
        android:id="@+id/iMavLinkStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tMessageCount"
        android:layout_below="@+id/tMessageCount"
        android:layout_marginTop="15dp"
        android:src="@drawable/red" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/iMavLinkStatus"
        android:layout_alignTop="@+id/iMavLinkStatus"
        android:layout_toRightOf="@+id/textView2"
        android:text="@string/mav_status" />

    <ImageView
        android:id="@+id/iDownlinkStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/iMavLinkStatus"
        android:layout_below="@+id/iMavLinkStatus"
        android:layout_marginTop="10dp"
        android:src="@drawable/red" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/iDownlinkStatus"
        android:layout_alignLeft="@+id/textView5"
        android:layout_alignTop="@+id/iDownlinkStatus"
        android:text="@string/downlink_status" />

</RelativeLayout>